--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,6 @@ dependencies:
   go_router: ^9.0.3
   get_it: ^7.6.0
   injectable: ^2.1.2
-  geocoding: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/images/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
